--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   yt-dlp-service:
     image: linux6200/yt_dlp_service:latest
@@ -6,8 +5,9 @@ services:
     ports:
       - "9000:8000"
     volumes: 
+      - ./.env:/app/.env
       - ./downloads:/app/downloads 
-      - /mnt/d/temp/youtube-download/www.youtube.com_cookies.txt:/app/cookies.txt
+      - ./www.youtube.com_cookies.txt:/app/cookies.txt
       - ./src/youtube/ydl_opts.json:/app/src/youtube/ydl_opts.json
     environment: 
       COOKIE_FILE_PATH: /app/cookies.txt 
