修改/api/v1/youtube/download的处理逻辑: 1. 新定义一个环境变量: VIDEO_DOWNLOAD_PATH,该环境指定保存下载的所有文件 2. 从调用参数的URL中提取video_id的值, 例如https://www.youtube.com/watch?v=jNQXAC9IVRw中的jNQXAC9IVRw 3. 把所有下载的文件保存在VIDEO_DOWNLOAD_PATH/{video_id}的目录中, 如果目录不存在则创建 4. 返回所有下载文件的文件名称列表 5.把所有下载文件中排除"mp4"的视频文件外, 将其他所有文件打包zip后,将zip文件返回

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       - ./www.youtube.com_cookies.txt:/app/cookies.txt
       - ./src/youtube/ydl_opts.json:/app/src/youtube/ydl_opts.json
     environment: 
-      COOKIE_FILE_PATH: /app/cookies.txt 
+      COOKIE_FILE_PATH: /app/cookies.txt
+      VIDEO_DOWNLOAD_PATH: /app/downloads
       TZ: Asia/Shanghai
     restart: unless-stopped
