--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ BILI_JCT=""
 BILI_BUVID3=""
 COOKIE_FILE_PATH=""
 VIDEO_DOWNLOAD_PATH=downloads
+
+# Subtitle upload polling configuration
+# Maximum number of retries when polling video readiness for subtitle upload (default: 5)
+CHECK_READY_MAX_RETRIES=10
+# Delay in seconds between retries when polling video readiness (default: 15)
+CHECK_READY_RETRY_DELAY=120
