修改upload调用为异步调用

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ VIDEO_DOWNLOAD_PATH=downloads
 CHECK_READY_MAX_RETRIES=10
 # Delay in seconds between retries when polling video readiness (default: 15)
 CHECK_READY_RETRY_DELAY=120
+
+N8N_WEBHOOK_URL="https://n8n.homelabtech.cn/webhook/b2d8a919-323e-46ea-9d39-80c1d75ca680"
