--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,4 @@
-# Bilibili Credentials
-# 请将这些值替换为您的真实凭证
-BILI_SESSDATA=""
-BILI_JCT=""
-BILI_BUVID3=""
+
 COOKIE_FILE_PATH=""
 VIDEO_DOWNLOAD_PATH=downloads
 
@@ -13,3 +9,5 @@ CHECK_READY_MAX_RETRIES=10
 CHECK_READY_RETRY_DELAY=120
 
 N8N_WEBHOOK_URL="https://n8n.homelabtech.cn/webhook/b2d8a919-323e-46ea-9d39-80c1d75ca680"
+
+BILIBILI_CREDENTIALS_FILE="./bilibili_credentials.json"
