--- a/.gitignore
+++ b/.gitignore
@@ -208,6 +208,5 @@ __marimo__/
 
  
 www.youtube.com_cookies.txt
-
 # Bilibili credentials
-src/bilibili/bilibili_credentials.json
+bilibili_credentials.json
