增加“转载”设置

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 
-COOKIE_FILE_PATH=""
+COOKIE_FILE_PATH="./www.youtube.com_cookies.txt"
 VIDEO_DOWNLOAD_PATH=downloads
 
 # Subtitle upload polling configuration
