--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       - ./src/youtube/ydl_opts.json:/app/src/youtube/ydl_opts.json
       - ./bilibili_credentials.json:/app/bilibili_credentials.json
     environment: 
+      TIKTOKEN_CACHE_DIR: /app/data
       COOKIE_FILE_PATH: /app/cookies.txt
       VIDEO_DOWNLOAD_PATH: /app/downloads
       BILIBILI_CREDENTIALS_FILE: /app/bilibili_credentials.json
